@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
 #
 
+2004-04-29 19:51:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-16
+
+    Summary:
+      Another checkpoint
+    Revision:
+      missinglib--head--0.0--patch-16
+
+
+    modified files:
+     ChangeLog libsrc/indexed/indexed.ml
+
+
 2004-04-29 19:42:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-15
 
     Summary:
